# variant_count

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE-MIT  Makefile.toml  README.md
.github/workflows/: lint-test.yml
src/: lib.rs
tests/: variant_count.rs
