[package]
name = "variant_count"
version = "1.1.0"
authors = ["Alexander Mescheryakov <freecoder.xx@gmail.com>"]
license = "MIT"
edition = "2024"
description = "Derive macro for enum which adds to it the count of variants."
readme = "README.md"
documentation = "https://docs.rs/variant_count"
repository = "https://github.com/XX/variant_count"
keywords = ["enum", "derive", "variant", "count"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
